Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* arbitrary exceptions during merging/unmerging no longer stop the
  merge/unmerge; a traceback is displayed instead.

* large scale conversion of internals to argparse.  Saner parsing namely,
  although it's still a work in progress to make it pretty.

* added initial profile inspection tool; pinspect profiles.

* man pages and docs in general have been converted to sphinx.  Definite
  improvement already, but more to come.

* pmaint copy arguments have changed; check the help, short version,
  it's now sane.

* pkgcore now lives at googlecode; http://pkgcore.googlecode.com/


pkgcore 0.6.6: July 11th, 2011

* make use/useq/usev extremely obnoxious towards offending devs who use them
  in global scope when they're not supposed to.  Pretty much, I'm tired of
  pkgcore being broken for being PMS compliant; as such I'm now pointing
  users loud and clear at the offenders.

* fix traceback in user profile support (/etc/portage/profiles).


pkgcore 0.6.5: Jun 22nd, 2011

* Log an error, rather than throwing an exception when binpkg cache cannot
  be updated.  Needs refinement long term, but for average users, this is
  preferable.

* loosen up pebuild a bit; choose the max version if slot/repo are all the
  same.  This allows pebuild dev-util/nano to choose 2.3.1 for example.

* tighten up econf implementation; ctarget/cbuild are now forced as early
  arguments to configure to work around some misbehaviours in configure
  scripts (broken scripts, but so it goes).

* tighten up ebuild environments variable handling- had a bleed through
  of variable 'x' that was breaking mesa builds.

* yet another src_install fix for EAPI=4; this time ensuring the default
  function is available.

* we now run bashrcs (profile and user) every phase to match portage
  behaviour.  If folks desire it, a patch making that optional would be
  welcome.
